SERVER-58023 PrimaryOnlyService should not invariant that _activeInstances is empty when in kPaused

(cherry picked from commit 6e08ac57662b82c3249d2bd2f6a02841f6bf75c5)